fix: add overflow for schedule

--- a/frontend/src/css/profile.css
+++ b/frontend/src/css/profile.css
@@ -106,4 +106,5 @@
 
 .scheduleMargin{
     margin-bottom: 3rem;
+    overflow-x: auto;
 }
